# bipp_projects

./: .gitmodules
myproj/: README.md  pyproject.toml  try.py
